--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,34 @@
             <artifactId>thumbnailator</artifactId>
             <version>0.4.20</version>
         </dependency>
+       
+        <!-- Apache Lib start -->
+        
+        <!-- Apache HttpClient for Uploading the Image to Server -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+    
+        <!-- WebP Image Conversion Library -->
+    
+        <dependency>
+            <groupId>io.github.mojtabaj</groupId>
+            <artifactId>c-webp</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+    
+        <!--        <dependency>
+            <groupId>com.github.webp-converter</groupId>
+            <artifactId>webp-converter</artifactId>
+            <version>1.0.1</version>
+        </dependency>-->
+        
+        
+        <!-- Apache Lib end -->
+          
+        <!-- Webjars Lib Start -->
     
         <dependency>
             <groupId>org.webjars</groupId>
@@ -162,6 +190,7 @@
             <artifactId>bootstrap</artifactId>
             <version>5.3.1</version>
         </dependency>
+        
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap-datepicker</artifactId>
@@ -170,10 +199,16 @@
         
         <dependency>
             <groupId>org.webjars</groupId>
-            <artifactId>font-awesome</artifactId>
-            <version>6.5.1</version>
+            <artifactId>momentjs</artifactId>
+            <version>2.29.1</version> <!-- or the latest version -->
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>eonasdan-bootstrap-datetimepicker</artifactId>
+            <version>4.17.47</version> <!-- or the latest version -->
         </dependency>
         
+
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>bootstrap-icons</artifactId>
@@ -192,6 +227,9 @@
             <artifactId>tinymce</artifactId>
             <version>5.0.9</version>
         </dependency>
+        
+        <!-- Webjars Lib End -->
+        
         
         <dependency>
             <groupId>org.jsmpp</groupId>
