--- a/src/main/resources/application-live.properties
+++ b/src/main/resources/application-live.properties
@@ -9,9 +9,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 #Hibernet 
-spring.jpa.hibernate.ddl-auto = validate
+#spring.jpa.hibernate.ddl-auto = validate
 #spring.jpa.hibernate.ddl-auto= create-drop
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto= create
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
